[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/platformer/ghost_rope.png" type="Texture" id=1]
[ext_resource path="res://assets/platformer/rope_piece_short.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/fail_drop_ladder.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes_two/GhostRope.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 48 )

[node name="GhostRope" type="Node2D"]
script = ExtResource( 4 )

[node name="RopeOk" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RopeBlock" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="NoDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
